git-annex (5.20140128) UNRELEASED; urgency=medium

  * Fixed direct mode annexed content locking code, which is used to
    guard against recursive file drops.
  * sync --content: Honor annex-ignore configuration.
  * sync: Don't try to sync with xmpp remotes, which are only currently
    supported when using the assistant.
  * sync --content: Re-pull from remotes after downloading content,
    since that can take a while and other changes may be pushed in the
    meantime.
  * sync --content: Reuse smart copy code from copy command, including
    handling and repairing out of date location tracking info.
    Closes: #737480
  * sync --content: Drop files from remotes that don't have them after
    getting them.
  * sync: Fix bug in automatic merge conflict resolution code when used
    on a filesystem not supporting symlinks, which resulted in it losing
    track of the symlink bit of annexed files.
  * Added ways to configure rsync options to be used only when uploading
    or downloading from a remote. Useful to eg limit upload bandwidth.
  * Document in man page that sshcaching uses ssh ControlMaster.
    Closes: #737476
  * Windows: It's now safe to run multiple git-annex processes concurrently
    on Windows; the lock files have been sorted out.
  * Windows: Avoid using unix-compat's rename, which refuses to rename
    directories.
  * Windows: Fix deletion of repositories by test suite and webapp.
  * Windows: Test suite 100% passes again.

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400

git-annex (5.20140127) unstable; urgency=medium

  * sync --content: New option that makes the content of annexed files be
    transferred. Similar to the assistant, this honors any configured
    preferred content expressions.
  * Remove --json option from commands not supporting it.
  * status: Support --json.
  * list: Fix specifying of files to list.
  * Allow --all to be mixed with matching options like --copies and --in