@@ -1,5 +1,7 @@
 git-annex (5.20140128) UNRELEASED; urgency=medium
 
+  * --in can now refer to files that were located in a repository at
+    some past date. For example, --in="here@{yesterday}"
   * Fixed direct mode annexed content locking code, which is used to
     guard against recursive file drops.
   * sync --content: Honor annex-ignore configuration.
